# boann-security-risk-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Containerfile  LICENSE  README.md  env.example  pyproject.toml
examples/config/: run-starter-remote-minimal.yaml  run-starter-remote-pgvector.yaml
scripts/: ingest_documents.py  shutdown_boann.py  start_boann.py
src/: boann_admin_server.py  boann_cli.py  boann_server.py  config.py
src/api/: __init__.py  admin_api.py  public_api.py
src/shared/: __init__.py  document_processor.py  logging_config.py
tests/: conftest.py  test_admin_api.py  test_ingest_documents.py  test_public_api.py
