[project]
name = "boann-security-risk-agent"
version = "0.0.1"
description = "Boann Security Risk AI Agent: Single Pane of Glass from OCSF (Open Cybersecurity Schema Framework) Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-stack==0.2.14",
    "llama-stack-client==0.2.14",
    "litellm==1.74.4",
    "sqlalchemy==2.0.41",
    "greenlet==3.2.3",
    "faiss-cpu~=1.12.0",
    "mcp~=1.18.0",
    "pypdf~=6.1.3",
    "psycopg2~=2.9.11",
]

[dependency-groups]
dev = [
    "pytest~=8.4.1",
    "pytest-cov~=6.2.1",
    "pytest-mock~=3.14.1",
    "pytest-asyncio~=0.24.0",
]
local-ml = [
    "sentence-transformers~=5.0.0",
    "peft~=0.16.0",
    "trl~=0.19.1",
]
